<resources>
    <string name="app_name">31 Tawla</string>
    <string name="cell_24">cell 24</string>
    <string name="cell_23">cell 23</string>
    <string name="cell_22">cell 22</string>
    <string name="cell_21">cell 21</string>
    <string name="cell_20">cell 20</string>
    <string name="cell_19">cell 19</string>
    <string name="cell_18">cell 18</string>
    <string name="cell_17">cell 17</string>
    <string name="cell_16">cell 16</string>
    <string name="cell_15">cell 15</string>
    <string name="cell_14">cell 14</string>
    <string name="cell_13">cell 13</string>
    <string name="animation_time">100</string>
    <string name="player_score">Score :</string>
    <string name="score_one_text" />
    <string name="player_turn">Yellow\'s Turn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_31_egyption_tawla">31 Egyption Tawla</string>
    <string name="resume_button">resume button</string>
    <string name="one_player_button">one player button</string>
    <string name="two_players_button">two players button</string>
    <string name="sound_icon">sound icon</string>
    <string name="winner">Winner</string>
    <string name="score">Score</string>
    <string name="play_again_button">play again button</string>
    <string name="back_button">back button</string>
    <string name="upper_message">upper message</string>
    <string name="lower_message">lower message</string>
    <string name="scoreFormat">%1$d - %2$d</string>
    <string name="about_string">This app was developed by \nSarah Osama\n Mo\'men Mohamed Hamdy\n students at \nComputer and Systems Engineering Department,
        \nFaculty of Engineering, \nAlexandria University</string>
</resources>