<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nongame_background"
        android:padding="16dp">

        <ImageView
            android:id="@+id/about_imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/about" />

        <ImageView
            android:id="@+id/sound_imageView"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/sound_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sound_bars" />

        <ImageView
            android:id="@+id/two_players_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/two_players_button"
            app:layout_constraintBottom_toTopOf="@+id/resume_imageView"
            app:layout_constraintEnd_toStartOf="@+id/resume_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/two_players_button" />

        <ImageView
            android:id="@+id/one_player_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/one_player_button"
            app:layout_constraintBottom_toTopOf="@+id/resume_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resume_imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/one_player_button" />

        <ImageView
            android:id="@+id/resume_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/resume_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/resume_button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cherry_swash"
            android:text="@string/_31_egyption_tawla"
            android:textColor="#02142A"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/sound_imageView"
            app:layout_constraintStart_toEndOf="@+id/sound_imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sound_on" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>