<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/diceLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"

        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/boardLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/player_1_score"
            android:textColor="@color/darkPurple"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/scoreOneText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreOneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_one_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/player_2_score"
            android:textColor="@color/darkPurple"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/scoreTwoText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreOneText" />

        <TextView
            android:id="@+id/scoreTwoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@id/diceImg1"

            />

        <ImageView
            android:id="@+id/diceImg1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/dice1"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/rollButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diceImg2"
            app:layout_constraintTop_toBottomOf="@+id/scoreTwoText"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/diceImg2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/dice6"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/rollButton"
            app:layout_constraintEnd_toStartOf="@+id/diceImg1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreTwoText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/roll_button"
            android:text="Roll"
            android:textAllCaps="false"
            android:textColor="@color/darkPurple"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/boardLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/woodenbackground"
        android:orientation="vertical"
        android:padding="3dp"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diceLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:weightSum="120">

            <ImageView
                android:id="@+id/imageView109"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_16"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell101" />

            <ImageView
                android:id="@+id/imageView108"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_16"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell102" />

            <ImageView
                android:id="@+id/imageView107"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell101" />

            <ImageView
                android:id="@+id/imageView106"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell102" />

            <ImageView
                android:id="@+id/imageView105"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell101" />

            <ImageView
                android:id="@+id/imageView103"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell102" />

            <ImageView
                android:id="@+id/imageView102"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell101" />

            <ImageView
                android:id="@+id/imageView101"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell102" />

            <ImageView
                android:id="@+id/imageView100"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell101" />

            <ImageView
                android:id="@+id/imageView99"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell102" />

            <ImageView
                android:id="@+id/imageView98"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell101" />

            <ImageView
                android:id="@+id/imageView97"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell102" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:paddingBottom="7dp">

            <ImageView
                android:id="@+id/imageView74"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/cell_13"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell100" />

            <ImageView
                android:id="@+id/imageView75"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_14"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell103" />

            <ImageView
                android:id="@+id/imageView76"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_15"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell100" />

            <ImageView
                android:id="@+id/imageView77"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_16"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell103" />

            <ImageView
                android:id="@+id/imageView78"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_17"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell100" />

            <ImageView
                android:id="@+id/imageView79"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_18"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell103" />

            <ImageView
                android:id="@+id/imageView69"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/cell_19"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell100" />

            <ImageView
                android:id="@+id/imageView70"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_20"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell103" />

            <ImageView
                android:id="@+id/imageView71"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_21"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell100" />

            <ImageView
                android:id="@+id/imageView72"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_22"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell103" />

            <ImageView
                android:id="@+id/imageView73"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_23"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell100" />

            <ImageView
                android:id="@+id/imageView48"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/cell_24"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cell103" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>